content/_generated-doc/3.2/config/quarkus-infinispan-client.adoc

:summaryTableId: quarkus-infinispan-client
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-infinispan-client_configuration]]link:#quarkus-infinispan-client_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-marshaller-class]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-marshaller-class[quarkus.infinispan-client.marshaller-class]`


[.description]
--
Sets the marshallerClass. Default is ProtoStreamMarshaller

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_MARSHALLER_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_MARSHALLER_CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-devservices-enabled]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-devservices-enabled[quarkus.infinispan-client.devservices.enabled]`


[.description]
--
If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present.

When DevServices is enabled Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode and when Docker is running.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-devservices-port]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-devservices-port[quarkus.infinispan-client.devservices.port]`


[.description]
--
Optional fixed port the dev service will listen to.

If not defined, the port will be chosen randomly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-devservices-shared]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-devservices-shared[quarkus.infinispan-client.devservices.shared]`


[.description]
--
Indicates if the Infinispan server managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Infinispan starts a new container.

The discovery uses the `quarkus-dev-service-infinispan` label. The value is configured using the `service-name` property.

Container sharing is only used in dev mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_SHARED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-devservices-service-name]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-devservices-service-name[quarkus.infinispan-client.devservices.service-name]`


[.description]
--
The value of the `quarkus-dev-service-infinispan` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Infinispan looks for a container with the `quarkus-dev-service-infinispan` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise, it starts a new container with the `quarkus-dev-service-infinispan` label set to the specified value.

This property is used when you need multiple shared Infinispan servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`infinispan`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-devservices-image-name]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-devservices-image-name[quarkus.infinispan-client.devservices.image-name]`


[.description]
--
The image to use. Note that only official Infinispan images are supported.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-devservices-artifacts]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-devservices-artifacts[quarkus.infinispan-client.devservices.artifacts]`


[.description]
--
List of the artifacts to automatically download and add to the Infinispan server libraries.

For example a Maven coordinate (org.postgresql:postgresql:42.3.1) or a dependency location url.

If an invalid value is passed, the Infinispan server will throw an error when trying to start.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_ARTIFACTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_ARTIFACTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-devservices-site]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-devservices-site[quarkus.infinispan-client.devservices.site]`


[.description]
--
Add a site name to start the Infinispan Server Container with Cross Site Replication enabled (ex. lon). Cross Site Replication is the capability to connect two separate Infinispan Server Clusters that might run in different Data Centers, and configure backup caches to copy the data across the clusters with active-active or active-passive replication. See more about Cross Site Replication in the Infinispan Documentation https://infinispan.org/docs/stable/titles/xsite/xsite.html Configure `mcast-port` to avoid forming a cluster with any other running Infinispan Server container.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_SITE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_SITE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-devservices-mcast-port]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-devservices-mcast-port[quarkus.infinispan-client.devservices.mcast-port]`


[.description]
--
If you are running an Infinispan Server already in docker, if the containers use the same mcastPort they will form a cluster. Set a different mcastPort to create a separate cluster in Docker (e. 46656). A common use case in a local Docker development mode, is the need of having two different Infinispan Clusters with Cross Site Replication enabled. see https://github.com/infinispan/infinispan-simple-tutorials/blob/main/infinispan-remote/cross-site-replication/docker-compose/

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_MCAST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_MCAST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-devservices-tracing-enabled]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-devservices-tracing-enabled[quarkus.infinispan-client.devservices.tracing.enabled]`


[.description]
--
Runs the Infinispan Server container with tracing enabled. Traces are disabled by default

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_TRACING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_TRACING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-devservices-tracing-exporter-otlp-endpoint]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-devservices-tracing-exporter-otlp-endpoint[quarkus.infinispan-client.devservices.tracing.exporter.otlp.endpoint]`


[.description]
--
Sets Infinispan Server otlp endpoint. Default value is http://localhost:4317

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_TRACING_EXPORTER_OTLP_ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_TRACING_EXPORTER_OTLP_ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`http://localhost:4317`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-health-enabled]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-health-enabled[quarkus.infinispan-client.health.enabled]`


[.description]
--
Whether or not a health check is published in case the smallrye-health extension is present.

This is a global setting and is not specific to an Infinispan Client.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_HEALTH_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_HEALTH_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-infinispan-client_quarkus-infinispan-client-uri]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-uri[quarkus.infinispan-client.uri]`


[.description]
--
Sets the URI of the running Infinispan server to connect to. hotrod://localhost:11222@admin:password If provided `hosts`, `username` and `password` will be ignored.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_URI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_URI+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-hosts]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-hosts[quarkus.infinispan-client.hosts]`


[.description]
--
Sets the host name/port to connect to. Each one is separated by a semicolon (eg. host1:11222;host2:11222).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_HOSTS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-client-intelligence]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-client-intelligence[quarkus.infinispan-client.client-intelligence]`


[.description]
--
Sets client intelligence used by authentication Available values: ++*++ `BASIC` - Means that the client doesn't handle server topology changes and therefore will only use the list of servers supplied at configuration time. ++*++ `TOPOLOGY_AWARE` - Use this provider if you don't want the client to present any certificates to the remote TLS host. ++*++ `HASH_DISTRIBUTION_AWARE` - Like `TOPOLOGY_AWARE` but with the additional advantage that each request involving keys will be routed to the server who is the primary owner which improves performance greatly. This is the default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_CLIENT_INTELLIGENCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_CLIENT_INTELLIGENCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`HASH_DISTRIBUTION_AWARE`


a| [[quarkus-infinispan-client_quarkus-infinispan-client-use-auth]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-use-auth[quarkus.infinispan-client.use-auth]`


[.description]
--
Enables or disables authentication. Set it to false when connecting to an Infinispan Server without authentication. deployments. Default is 'true'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_USE_AUTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_USE_AUTH+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-infinispan-client_quarkus-infinispan-client-username]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-username[quarkus.infinispan-client.username]`


[.description]
--
Sets username used by authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-password]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-password[quarkus.infinispan-client.password]`


[.description]
--
Sets password used by authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-auth-realm]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-auth-realm[quarkus.infinispan-client.auth-realm]`


[.description]
--
Sets realm used by authentication

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_AUTH_REALM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_AUTH_REALM+++`
endif::add-copy-button-to-env-var[]
--|string 
|`default`


a| [[quarkus-infinispan-client_quarkus-infinispan-client-auth-server-name]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-auth-server-name[quarkus.infinispan-client.auth-server-name]`


[.description]
--
Sets server name used by authentication

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_AUTH_SERVER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_AUTH_SERVER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`infinispan`


a| [[quarkus-infinispan-client_quarkus-infinispan-client-sasl-mechanism]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-sasl-mechanism[quarkus.infinispan-client.sasl-mechanism]`


[.description]
--
Sets SASL mechanism used by authentication. Available values: ++*++ `DIGEST-MD5` - Uses the MD5 hashing algorithm in addition to nonces to encrypt credentials. This is the default. ++*++ `EXTERNAL` - Uses client certificates to provide valid identities to Infinispan Server and enable encryption. ++*++ `PLAIN` - Sends credentials in plain text (unencrypted) over the wire in a way that is similar to HTTP BASIC authentication. You should use `PLAIN` authentication only in combination with TLS encryption.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_SASL_MECHANISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_SASL_MECHANISM+++`
endif::add-copy-button-to-env-var[]
--|string 
|`DIGEST-MD5`


a| [[quarkus-infinispan-client_quarkus-infinispan-client-trust-store]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-trust-store[quarkus.infinispan-client.trust-store]`


[.description]
--
Specifies the filename of a truststore to use to create the `SSLContext`. You also need to specify a trustStorePassword. Setting this property implicitly enables SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-trust-store-password]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-trust-store-password[quarkus.infinispan-client.trust-store-password]`


[.description]
--
Specifies the password needed to open the truststore You also need to specify a trustStore. Setting this property implicitly enables SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-trust-store-type]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-trust-store-type[quarkus.infinispan-client.trust-store-type]`


[.description]
--
Specifies the type of the truststore, such as JKS or JCEKS. Defaults to JKS if trustStore is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_TRUST_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_TRUST_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-ssl-protocol]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-ssl-protocol[quarkus.infinispan-client.ssl-protocol]`


[.description]
--
Configures the secure socket protocol. Setting this property implicitly enables SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_SSL_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_SSL_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-ssl-provider]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-ssl-provider[quarkus.infinispan-client.ssl-provider]`


[.description]
--
Sets the ssl provider. For example BCFIPS Setting this implicitly enables SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_SSL_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_SSL_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-ssl-ciphers]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-ssl-ciphers[quarkus.infinispan-client.ssl-ciphers]`


[.description]
--
Configures the ciphers. Setting this property implicitly enables SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_SSL_CIPHERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_SSL_CIPHERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-tracing-propagation-enabled]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-tracing-propagation-enabled[quarkus.infinispan-client.tracing.propagation.enabled]`


[.description]
--
Whether a tracing propagation is enabled in case the Opentelemetry extension is present. By default the propagation of the context is propagated from the client to the Infinispan Server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_TRACING_PROPAGATION_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_TRACING_PROPAGATION_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-use-schema-registration]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-use-schema-registration[quarkus.infinispan-client.use-schema-registration]`


[.description]
--
Enables or disables Protobuf generated schemas upload to the server. Set it to 'false' when you need to handle the lifecycle of the Protobuf Schemas on Server side yourself. Default is 'true'. This is a global setting and is not specific to a Infinispan Client.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_USE_SCHEMA_REGISTRATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_USE_SCHEMA_REGISTRATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-cache-cache-configuration-resource]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-cache-cache-configuration-resource[quarkus.infinispan-client.cache."cache".configuration-resource]`


[.description]
--
Cache configuration file in XML, JSON or YAML is defined in build time to create the cache on first access. An example of the user defined property. cacheConfig.xml file is located in the 'resources' folder: quarkus.infinispan-client.cache.bookscache.configuration-resource=cacheConfig.xml

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__CONFIGURATION_RESOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__CONFIGURATION_RESOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-devservices-container-env-container-env]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-devservices-container-env-container-env[quarkus.infinispan-client.devservices.container-env]`


[.description]
--
Environment variables that are passed to the container.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_CONTAINER_ENV+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_DEVSERVICES_CONTAINER_ENV+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-marshaller-class]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-marshaller-class[quarkus.infinispan-client."named-infinispan-clients".marshaller-class]`


[.description]
--
Sets the marshallerClass. Default is ProtoStreamMarshaller

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__MARSHALLER_CLASS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__MARSHALLER_CLASS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-cache-cache-configuration-resource]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-cache-cache-configuration-resource[quarkus.infinispan-client."named-infinispan-clients".cache."cache".configuration-resource]`


[.description]
--
Cache configuration file in XML, JSON or YAML is defined in build time to create the cache on first access. An example of the user defined property. cacheConfig.xml file is located in the 'resources' folder: quarkus.infinispan-client.cache.bookscache.configuration-resource=cacheConfig.xml

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CACHE__CACHE__CONFIGURATION_RESOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CACHE__CACHE__CONFIGURATION_RESOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-enabled]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-enabled[quarkus.infinispan-client."named-infinispan-clients".devservices.enabled]`


[.description]
--
If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present.

When DevServices is enabled Quarkus will attempt to automatically configure and start a database when running in Dev or Test mode and when Docker is running.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-port]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-port[quarkus.infinispan-client."named-infinispan-clients".devservices.port]`


[.description]
--
Optional fixed port the dev service will listen to.

If not defined, the port will be chosen randomly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-shared]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-shared[quarkus.infinispan-client."named-infinispan-clients".devservices.shared]`


[.description]
--
Indicates if the Infinispan server managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Infinispan starts a new container.

The discovery uses the `quarkus-dev-service-infinispan` label. The value is configured using the `service-name` property.

Container sharing is only used in dev mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_SHARED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-service-name]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-service-name[quarkus.infinispan-client."named-infinispan-clients".devservices.service-name]`


[.description]
--
The value of the `quarkus-dev-service-infinispan` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Infinispan looks for a container with the `quarkus-dev-service-infinispan` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise, it starts a new container with the `quarkus-dev-service-infinispan` label set to the specified value.

This property is used when you need multiple shared Infinispan servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`infinispan`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-image-name]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-image-name[quarkus.infinispan-client."named-infinispan-clients".devservices.image-name]`


[.description]
--
The image to use. Note that only official Infinispan images are supported.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-artifacts]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-artifacts[quarkus.infinispan-client."named-infinispan-clients".devservices.artifacts]`


[.description]
--
List of the artifacts to automatically download and add to the Infinispan server libraries.

For example a Maven coordinate (org.postgresql:postgresql:42.3.1) or a dependency location url.

If an invalid value is passed, the Infinispan server will throw an error when trying to start.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_ARTIFACTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_ARTIFACTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-site]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-site[quarkus.infinispan-client."named-infinispan-clients".devservices.site]`


[.description]
--
Add a site name to start the Infinispan Server Container with Cross Site Replication enabled (ex. lon). Cross Site Replication is the capability to connect two separate Infinispan Server Clusters that might run in different Data Centers, and configure backup caches to copy the data across the clusters with active-active or active-passive replication. See more about Cross Site Replication in the Infinispan Documentation https://infinispan.org/docs/stable/titles/xsite/xsite.html Configure `mcast-port` to avoid forming a cluster with any other running Infinispan Server container.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_SITE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_SITE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-mcast-port]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-mcast-port[quarkus.infinispan-client."named-infinispan-clients".devservices.mcast-port]`


[.description]
--
If you are running an Infinispan Server already in docker, if the containers use the same mcastPort they will form a cluster. Set a different mcastPort to create a separate cluster in Docker (e. 46656). A common use case in a local Docker development mode, is the need of having two different Infinispan Clusters with Cross Site Replication enabled. see https://github.com/infinispan/infinispan-simple-tutorials/blob/main/infinispan-remote/cross-site-replication/docker-compose/

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_MCAST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_MCAST_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-tracing-enabled]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-tracing-enabled[quarkus.infinispan-client."named-infinispan-clients".devservices.tracing.enabled]`


[.description]
--
Runs the Infinispan Server container with tracing enabled. Traces are disabled by default

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_TRACING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_TRACING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-tracing-exporter-otlp-endpoint]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-tracing-exporter-otlp-endpoint[quarkus.infinispan-client."named-infinispan-clients".devservices.tracing.exporter.otlp.endpoint]`


[.description]
--
Sets Infinispan Server otlp endpoint. Default value is http://localhost:4317

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_TRACING_EXPORTER_OTLP_ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_TRACING_EXPORTER_OTLP_ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`http://localhost:4317`


a|icon:lock[title=Fixed at build time] [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-container-env-container-env]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-devservices-container-env-container-env[quarkus.infinispan-client."named-infinispan-clients".devservices.container-env]`


[.description]
--
Environment variables that are passed to the container.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_CONTAINER_ENV+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__DEVSERVICES_CONTAINER_ENV+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-cache-cache-configuration]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-cache-cache-configuration[quarkus.infinispan-client.cache."cache".configuration]`


[.description]
--
Cache configuration in inlined XML to create the cache on first access. Will be ignored if the configuration-uri is provided for the same cache name. An example of the user defined property: quarkus.infinispan-client.cache.bookscache.configuration=

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__CONFIGURATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__CONFIGURATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-cache-cache-configuration-uri]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-cache-cache-configuration-uri[quarkus.infinispan-client.cache."cache".configuration-uri]`


[.description]
--
Cache configuration file in XML, Json or YAML whose path will be converted to URI to create the cache on first access. An example of the user defined property. cacheConfig.xml file is located in the 'resources' folder: quarkus.infinispan-client.cache.bookscache.configuration-uri=cacheConfig.xml

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__CONFIGURATION_URI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__CONFIGURATION_URI+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-cache-cache-near-cache-max-entries]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-cache-cache-near-cache-max-entries[quarkus.infinispan-client.cache."cache".near-cache-max-entries]`


[.description]
--
The maximum number of entries to keep locally for the specified cache.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__NEAR_CACHE_MAX_ENTRIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__NEAR_CACHE_MAX_ENTRIES+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-cache-cache-near-cache-mode]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-cache-cache-near-cache-mode[quarkus.infinispan-client.cache."cache".near-cache-mode]`


[.description]
--
Sets near cache mode used by the Infinispan Client Available values: ++*++ `DISABLED` - Means that near caching is disabled. This is the default value. ++*++ `INVALIDATED` - Means is near caching is invalidated, so when entries are updated or removed server-side, invalidation messages will be sent to clients to remove them from the near cache.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__NEAR_CACHE_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__NEAR_CACHE_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`disabled`, `invalidated` 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-cache-cache-near-cache-use-bloom-filter]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-cache-cache-near-cache-use-bloom-filter[quarkus.infinispan-client.cache."cache".near-cache-use-bloom-filter]`


[.description]
--
Enables bloom filter for near caching. Bloom filters optimize performance for write operations by reducing the total number of invalidation messages.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__NEAR_CACHE_USE_BLOOM_FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT_CACHE__CACHE__NEAR_CACHE_USE_BLOOM_FILTER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-uri]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-uri[quarkus.infinispan-client."named-infinispan-clients".uri]`


[.description]
--
Sets the URI of the running Infinispan server to connect to. hotrod://localhost:11222@admin:password If provided `hosts`, `username` and `password` will be ignored.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__URI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__URI+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-hosts]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-hosts[quarkus.infinispan-client."named-infinispan-clients".hosts]`


[.description]
--
Sets the host name/port to connect to. Each one is separated by a semicolon (eg. host1:11222;host2:11222).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__HOSTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__HOSTS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-client-intelligence]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-client-intelligence[quarkus.infinispan-client."named-infinispan-clients".client-intelligence]`


[.description]
--
Sets client intelligence used by authentication Available values: ++*++ `BASIC` - Means that the client doesn't handle server topology changes and therefore will only use the list of servers supplied at configuration time. ++*++ `TOPOLOGY_AWARE` - Use this provider if you don't want the client to present any certificates to the remote TLS host. ++*++ `HASH_DISTRIBUTION_AWARE` - Like `TOPOLOGY_AWARE` but with the additional advantage that each request involving keys will be routed to the server who is the primary owner which improves performance greatly. This is the default.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CLIENT_INTELLIGENCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CLIENT_INTELLIGENCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|`HASH_DISTRIBUTION_AWARE`


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-use-auth]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-use-auth[quarkus.infinispan-client."named-infinispan-clients".use-auth]`


[.description]
--
Enables or disables authentication. Set it to false when connecting to an Infinispan Server without authentication. deployments. Default is 'true'.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__USE_AUTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__USE_AUTH+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-username]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-username[quarkus.infinispan-client."named-infinispan-clients".username]`


[.description]
--
Sets username used by authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__USERNAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__USERNAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-password]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-password[quarkus.infinispan-client."named-infinispan-clients".password]`


[.description]
--
Sets password used by authentication.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-auth-realm]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-auth-realm[quarkus.infinispan-client."named-infinispan-clients".auth-realm]`


[.description]
--
Sets realm used by authentication

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__AUTH_REALM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__AUTH_REALM+++`
endif::add-copy-button-to-env-var[]
--|string 
|`default`


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-auth-server-name]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-auth-server-name[quarkus.infinispan-client."named-infinispan-clients".auth-server-name]`


[.description]
--
Sets server name used by authentication

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__AUTH_SERVER_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__AUTH_SERVER_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`infinispan`


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-sasl-mechanism]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-sasl-mechanism[quarkus.infinispan-client."named-infinispan-clients".sasl-mechanism]`


[.description]
--
Sets SASL mechanism used by authentication. Available values: ++*++ `DIGEST-MD5` - Uses the MD5 hashing algorithm in addition to nonces to encrypt credentials. This is the default. ++*++ `EXTERNAL` - Uses client certificates to provide valid identities to Infinispan Server and enable encryption. ++*++ `PLAIN` - Sends credentials in plain text (unencrypted) over the wire in a way that is similar to HTTP BASIC authentication. You should use `PLAIN` authentication only in combination with TLS encryption.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__SASL_MECHANISM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__SASL_MECHANISM+++`
endif::add-copy-button-to-env-var[]
--|string 
|`DIGEST-MD5`


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-trust-store]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-trust-store[quarkus.infinispan-client."named-infinispan-clients".trust-store]`


[.description]
--
Specifies the filename of a truststore to use to create the `SSLContext`. You also need to specify a trustStorePassword. Setting this property implicitly enables SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__TRUST_STORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__TRUST_STORE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-trust-store-password]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-trust-store-password[quarkus.infinispan-client."named-infinispan-clients".trust-store-password]`


[.description]
--
Specifies the password needed to open the truststore You also need to specify a trustStore. Setting this property implicitly enables SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__TRUST_STORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__TRUST_STORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-trust-store-type]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-trust-store-type[quarkus.infinispan-client."named-infinispan-clients".trust-store-type]`


[.description]
--
Specifies the type of the truststore, such as JKS or JCEKS. Defaults to JKS if trustStore is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__TRUST_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__TRUST_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-ssl-protocol]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-ssl-protocol[quarkus.infinispan-client."named-infinispan-clients".ssl-protocol]`


[.description]
--
Configures the secure socket protocol. Setting this property implicitly enables SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__SSL_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__SSL_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-ssl-provider]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-ssl-provider[quarkus.infinispan-client."named-infinispan-clients".ssl-provider]`


[.description]
--
Sets the ssl provider. For example BCFIPS Setting this implicitly enables SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__SSL_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__SSL_PROVIDER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-ssl-ciphers]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-ssl-ciphers[quarkus.infinispan-client."named-infinispan-clients".ssl-ciphers]`


[.description]
--
Configures the ciphers. Setting this property implicitly enables SSL/TLS.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__SSL_CIPHERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__SSL_CIPHERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-tracing-propagation-enabled]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-tracing-propagation-enabled[quarkus.infinispan-client."named-infinispan-clients".tracing.propagation.enabled]`


[.description]
--
Whether a tracing propagation is enabled in case the Opentelemetry extension is present. By default the propagation of the context is propagated from the client to the Infinispan Server.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__TRACING_PROPAGATION_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__TRACING_PROPAGATION_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-cache-cache-configuration]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-cache-cache-configuration[quarkus.infinispan-client."named-infinispan-clients".cache."cache".configuration]`


[.description]
--
Cache configuration in inlined XML to create the cache on first access. Will be ignored if the configuration-uri is provided for the same cache name. An example of the user defined property: quarkus.infinispan-client.cache.bookscache.configuration=

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CACHE__CACHE__CONFIGURATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CACHE__CACHE__CONFIGURATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-cache-cache-configuration-uri]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-cache-cache-configuration-uri[quarkus.infinispan-client."named-infinispan-clients".cache."cache".configuration-uri]`


[.description]
--
Cache configuration file in XML, Json or YAML whose path will be converted to URI to create the cache on first access. An example of the user defined property. cacheConfig.xml file is located in the 'resources' folder: quarkus.infinispan-client.cache.bookscache.configuration-uri=cacheConfig.xml

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CACHE__CACHE__CONFIGURATION_URI+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CACHE__CACHE__CONFIGURATION_URI+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-cache-cache-near-cache-max-entries]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-cache-cache-near-cache-max-entries[quarkus.infinispan-client."named-infinispan-clients".cache."cache".near-cache-max-entries]`


[.description]
--
The maximum number of entries to keep locally for the specified cache.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CACHE__CACHE__NEAR_CACHE_MAX_ENTRIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CACHE__CACHE__NEAR_CACHE_MAX_ENTRIES+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-cache-cache-near-cache-mode]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-cache-cache-near-cache-mode[quarkus.infinispan-client."named-infinispan-clients".cache."cache".near-cache-mode]`


[.description]
--
Sets near cache mode used by the Infinispan Client Available values: ++*++ `DISABLED` - Means that near caching is disabled. This is the default value. ++*++ `INVALIDATED` - Means is near caching is invalidated, so when entries are updated or removed server-side, invalidation messages will be sent to clients to remove them from the near cache.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CACHE__CACHE__NEAR_CACHE_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CACHE__CACHE__NEAR_CACHE_MODE+++`
endif::add-copy-button-to-env-var[]
-- a|
`disabled`, `invalidated` 
|


a| [[quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-cache-cache-near-cache-use-bloom-filter]]`link:#quarkus-infinispan-client_quarkus-infinispan-client-named-infinispan-clients-cache-cache-near-cache-use-bloom-filter[quarkus.infinispan-client."named-infinispan-clients".cache."cache".near-cache-use-bloom-filter]`


[.description]
--
Enables bloom filter for near caching. Bloom filters optimize performance for write operations by reducing the total number of invalidation messages.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CACHE__CACHE__NEAR_CACHE_USE_BLOOM_FILTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_INFINISPAN_CLIENT__NAMED_INFINISPAN_CLIENTS__CACHE__CACHE__NEAR_CACHE_USE_BLOOM_FILTER+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|

|===